Update Index.html and style.css

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
         <h1>Index</h1>
         <a href="login.php">Login</a>
         <a href="register.php">Register</a>
+        <a>Sobre Nós</a>
     </header>
 </body>
 </html>
