--- a/Index.html
+++ b/Index.html
@@ -3,16 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>CyberTech Upx III</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <h1>Index</h1>
-        <a href="login.php">Login</a>
-        <a href="register.php">Register</a>
-        <a>Sobre Nós</a>
+        <nav>
+            <ul>
+                <li><a href="login.php">Login</a></li>
+                <li><a href="register.php">Register</a></li>
+                <li><a href="#about-us">Sobre Nós</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <main class="container">
+        <section class="content">
+            <h2>Seja bem-vindo ao nosso site</h2>
+            <p>Este é um site de exemplo para a disciplina de Programação Web</p>
+        </section>
+
+        <section id="about-us">
+            <h2>Sobre Nós</h2>
+            <p>Somos uma equipe dedicada a ensinar e aprender sobre tecnologias web.</p>
+        </section>
+
+        <section id="services">
+            <h2>Serviços</h2>
+            <ul>
+                <li>Desenvolvimento Web</li>
+                <li>Consultoria em TI</li>
+                <li>Treinamentos e Workshops</li>
+            </ul>
+        </section>
+
+        <aside>
+            <h2>Notícias</h2>
+            <ul>
+                <li><a href="#">Notícia 1</a></li>
+                <li><a href="#">Notícia 2</a></li>
+                <li><a href="#">Notícia 3</a></li>
+                <li><a href="#">Notícia 4</a></li>
+            </ul>
+        </aside>
+
+        <section id="contact">
+            <h2>Contato</h2>
+            <form action="submit_form.php" method="post">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" required>
+                <br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <br>
+                <label for="message">Mensagem:</label>
+                <textarea id="message" name="message" required></textarea>
+                <br>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    
+
+    <footer>
+        <p>&copy; 2023 CyberTech Upx III. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
