--- a/html/login.html
+++ b/html/login.html
@@ -28,13 +28,14 @@
 
         <div class="lembrar_senha">
             <label><input type="checkbox">Lembrar de mim</label>
-            <a href="#">Esqueceu a senha?</a>
+            <a href="">Esqueceu a senha?</a>
         </div>
 
-        <button class="submit" class="btn">Login</button>
+        <button class="submit" class="btn" onclick="location.href='index.html'">Entrar</button>
 
         <div class="register">
             <p>Não tem uma conta? <a href="#">Registre-se</a></p>
+        </div>
 
     </form>
 
