Refactor login page to add favicon

--- a/html/login.html
+++ b/html/login.html
@@ -9,6 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
     </style>
+    <link rel="icon" href="/css/img/pleno_sol_logo-removebg-preview.png" type="image/png">
 </head>
 <body>
 
