--- a/html/login.html
+++ b/html/login.html
@@ -33,6 +33,8 @@
         </div>
 
         <button class="submit" class="btn" onclick="location.href='index.html'">Entrar</button>
+        <script src="../ts/_login.js"></script>
+
 
         <div class="register">
             <p>Não tem uma conta? <a href="#">Registre-se</a></p>
