--- a/html/Index.html
+++ b/html/Index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Kaiadmin - Bootstrap 5 Admin Dashboard</title>
+    <title>Pleno Sol</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
@@ -14,6 +13,7 @@
     />
 
     <!-- Fonts and icons -->
+    <script src="assets/js/plugin/webfont/webfont.min.js"></script>
     <script>
       WebFont.load({
         google: { families: ["Public Sans:300,400,500,600,700"] },
@@ -38,11 +38,12 @@
     <link rel="stylesheet" href="/css/lib.css" />
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
+  
   </head>
   <body>
     <div class="wrapper">
       <!-- Sidebar -->
-      <div class="sidebar" data-background-color="dark">
+      <div class="sidebar sidebar-style-2" data-background-color="dark">
         <div class="sidebar-logo">
           <!-- Logo Header -->
           <div class="logo-header" data-background-color="dark">
@@ -71,26 +72,17 @@
         <div class="sidebar-wrapper scrollbar scrollbar-inner">
           <div class="sidebar-content">
             <ul class="nav nav-secondary">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a
                   data-bs-toggle="collapse"
                   href="#dashboard"
                   class="collapsed"
                   aria-expanded="false"
                 >
-                  <i class="fas fa-home"></i>
                   <p>Dashboard</p>
-                  <span class="caret"></span>
                 </a>
-                <div class="collapse" id="dashboard">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="../demo1/index.html">
-                        <span class="sub-item">Dashboard 1</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+              </li>
+          
             </ul>
           </div>
         </div>
@@ -146,34 +138,6 @@
                 </div>
               </nav>
 
-              <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
-                <li
-                  class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none"
-                >
-                  <a
-                    class="nav-link dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                    href="#"
-                    role="button"
-                    aria-expanded="false"
-                    aria-haspopup="true"
-                  >
-                    <i class="fa fa-search"></i>
-                  </a>
-                  <ul class="dropdown-menu dropdown-search animated fadeIn">
-                    <form class="navbar-left navbar-form nav-search">
-                      <div class="input-group">
-                        <input
-                          type="text"
-                          placeholder="Search ..."
-                          class="form-control"
-                        />
-                      </div>
-                    </form>
-                  </ul>
-                </li>
-
-              </ul>
             </div>
           </nav>
           <!-- End Navbar -->
@@ -193,87 +157,107 @@
                 <a href="#" class="btn btn-primary btn-round">Add Customer</a>
               </div>
             </div>
-            <div class="row">
-              <div class="col-sm-6 col-md-3">
-                <div class="card card-stats card-round">
+            <div class="row row-card-no-pd">
+              <div class="col-12 col-sm-6 col-md-6 col-xl-3">
+                <div class="card">
                   <div class="card-body">
-                    <div class="row align-items-center">
-                      <div class="col-icon">
-                        <div
-                          class="icon-big text-center icon-primary bubble-shadow-small"
-                        >
-                          <i class="fas fa-users"></i>
-                        </div>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h6><b>Todays Income</b></h6>
+                        <p class="text-muted">All Customs Value</p>
                       </div>
-                      <div class="col col-stats ms-3 ms-sm-0">
-                        <div class="numbers">
-                          <p class="card-category">Visitors</p>
-                          <h4 class="card-title">1,294</h4>
-                        </div>
-                      </div>
+                      <h4 class="text-info fw-bold">$170</h4>
+                    </div>
+                    <div class="progress progress-sm">
+                      <div
+                        class="progress-bar bg-info w-75"
+                        role="progressbar"
+                        aria-valuenow="75"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <div class="d-flex justify-content-between mt-2">
+                      <p class="text-muted mb-0">Change</p>
+                      <p class="text-muted mb-0">75%</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3">
-                <div class="card card-stats card-round">
+              <div class="col-12 col-sm-6 col-md-6 col-xl-3">
+                <div class="card">
                   <div class="card-body">
-                    <div class="row align-items-center">
-                      <div class="col-icon">
-                        <div
-                          class="icon-big text-center icon-info bubble-shadow-small"
-                        >
-                          <i class="fas fa-user-check"></i>
-                        </div>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h6><b>Total Revenue</b></h6>
+                        <p class="text-muted">All Customs Value</p>
                       </div>
-                      <div class="col col-stats ms-3 ms-sm-0">
-                        <div class="numbers">
-                          <p class="card-category">Subscribers</p>
-                          <h4 class="card-title">1303</h4>
-                        </div>
-                      </div>
+                      <h4 class="text-success fw-bold">$120</h4>
+                    </div>
+                    <div class="progress progress-sm">
+                      <div
+                        class="progress-bar bg-success w-25"
+                        role="progressbar"
+                        aria-valuenow="25"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <div class="d-flex justify-content-between mt-2">
+                      <p class="text-muted mb-0">Change</p>
+                      <p class="text-muted mb-0">25%</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3">
-                <div class="card card-stats card-round">
+              <div class="col-12 col-sm-6 col-md-6 col-xl-3">
+                <div class="card">
                   <div class="card-body">
-                    <div class="row align-items-center">
-                      <div class="col-icon">
-                        <div
-                          class="icon-big text-center icon-success bubble-shadow-small"
-                        >
-                          <i class="fas fa-luggage-cart"></i>
-                        </div>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h6><b>New Orders</b></h6>
+                        <p class="text-muted">Fresh Order Amount</p>
                       </div>
-                      <div class="col col-stats ms-3 ms-sm-0">
-                        <div class="numbers">
-                          <p class="card-category">Sales</p>
-                          <h4 class="card-title">$ 1,345</h4>
-                        </div>
-                      </div>
+                      <h4 class="text-danger fw-bold">15</h4>
+                    </div>
+                    <div class="progress progress-sm">
+                      <div
+                        class="progress-bar bg-danger w-50"
+                        role="progressbar"
+                        aria-valuenow="50"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <div class="d-flex justify-content-between mt-2">
+                      <p class="text-muted mb-0">Change</p>
+                      <p class="text-muted mb-0">50%</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3">
-                <div class="card card-stats card-round">
+              <div class="col-12 col-sm-6 col-md-6 col-xl-3">
+                <div class="card">
                   <div class="card-body">
-                    <div class="row align-items-center">
-                      <div class="col-icon">
-                        <div
-                          class="icon-big text-center icon-secondary bubble-shadow-small"
-                        >
-                          <i class="far fa-check-circle"></i>
-                        </div>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h6><b>New Users</b></h6>
+                        <p class="text-muted">Joined New User</p>
                       </div>
-                      <div class="col col-stats ms-3 ms-sm-0">
-                        <div class="numbers">
-                          <p class="card-category">Order</p>
-                          <h4 class="card-title">576</h4>
-                        </div>
-                      </div>
+                      <h4 class="text-secondary fw-bold">12</h4>
+                    </div>
+                    <div class="progress progress-sm">
+                      <div
+                        class="progress-bar bg-secondary w-25"
+                        role="progressbar"
+                        aria-valuenow="25"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <div class="d-flex justify-content-between mt-2">
+                      <p class="text-muted mb-0">Change</p>
+                      <p class="text-muted mb-0">25%</p>
                     </div>
                   </div>
                 </div>
@@ -281,7 +265,7 @@
             </div>
             <div class="row">
               <div class="col-md-8">
-                <div class="card card-round">
+                <div class="card">
                   <div class="card-header">
                     <div class="card-head-row">
                       <div class="card-title">User Statistics</div>
@@ -313,7 +297,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card card-primary card-round">
+                <div class="card card-primary">
                   <div class="card-header">
                     <div class="card-head-row">
                       <div class="card-title">Daily Sales</div>
@@ -353,7 +337,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card-round">
+                <div class="card">
                   <div class="card-body pb-0">
                     <div class="h1 fw-bold float-end text-primary">+5%</div>
                     <h2 class="mb-2">17</h2>
@@ -365,9 +349,10 @@
                 </div>
               </div>
             </div>
-           
+
           </div>
         </div>
+
         <footer class="footer">
           <div class="container-fluid d-flex justify-content-between">
             <nav class="pull-left">
